--- a/notebooks/01_exploracion.ipynb
+++ b/notebooks/01_exploracion.ipynb
@@ -9,15 +9,25 @@
     "\n",
     "## Introducción\n",
     "La democracia adopta múltiples formas y niveles de calidad.  \n",
-    "Este proyecto analiza **cómo se agrupan los países del mundo** según sus características democráticas, utilizando indicadores del prestigioso proyecto **V-Dem (Varieties of Democracy)**.\n",
+    "Este proyecto analiza **cómo se agrupan los países del mundo** según sus características democráticas, utilizando indicadores desarrollados por el prestigioso proyecto **V-Dem (Varieties of Democracy)**.\n",
     "\n",
-    "El objetivo es **descubrir tipologías de democracias** en el presente,\n",
-    "combinando técnicas de **Machine Learning no supervisado** con interpretación politológica.\n",
+    "V-Dem es una iniciativa internacional coordinada por la **Universidad de Gotemburgo** (Suecia) y la **Universidad de Notre Dame** (Estados Unidos), que trabaja junto con una red global de más de **3.500 expertos** para evaluar la calidad institucional y democrática de países en todo el mundo.\n",
+    "\n",
+    "Los datos de V-Dem constituyen **el estándar más completo** en estudios comparados de democracia, midiendo dimensiones como:\n",
+    "\n",
+    "- libertades civiles  \n",
+    "- participación ciudadana  \n",
+    "- independencia judicial  \n",
+    "- libertad de prensa  \n",
+    "- igualdad política  \n",
+    "- control del poder y rendición de cuentas  \n",
+    "\n",
+    "El objetivo de este proyecto es **descubrir tipologías de democracias** en el presente, combinando técnicas de **Machine Learning no supervisado** con interpretación politológica para proponer una clasificación empírica de los regímenes políticos contemporáneos.\n",
     "\n",
     "**Dataset:** `V-Dem-CY-Core-v15.csv`  \n",
     "- Versión 15 (marzo 2025)  \n",
     "- Datos país–año con +1.000 indicadores de democracia, derechos y participación  \n",
-    "- Aquí trabajaremos sobre el **año más reciente disponible** para agrupar países por características similares\n",
+    "- Se utilizará el **año más reciente disponible** para una visión actual del panorama democrático global\n",
     "\n",
     "---\n",
     "\n",
@@ -29,24 +39,28 @@
     "---\n",
     "\n",
     "## Objetivos\n",
-    "- Seleccionar indicadores centrales sobre calidad democrática (libertades, participación, instituciones).  \n",
-    "- Aplicar **PCA** para reducir dimensionalidad.  \n",
+    "- Seleccionar indicadores centrales sobre calidad democrática (instituciones, libertades, participación).  \n",
+    "- Aplicar **PCA** para reducción de dimensionalidad.  \n",
     "- Entrenar **K-Means** (y/o DBSCAN) para identificar clusters.  \n",
-    "- Visualizar los agrupamientos en 2D y **analizar su interpretación politológica**.\n",
+    "- Visualizar los agrupamientos en 2D y **analizar sus implicancias politológicas**.\n",
     "\n",
     "---\n",
     "\n",
     "## Alcance y supuestos\n",
     "- Se utiliza información pública y consolidada de V-Dem.  \n",
     "- Se trabaja a nivel **comparado** (todos los países con datos disponibles).  \n",
-    "- El resultado **no implica juicios normativos**, sino una clasificación basada en datos.\n",
+    "- El resultado **no implica juicios normativos**, sino una clasificación basada en datos.  \n",
+    "- El análisis se limita a variables seleccionadas y al año más reciente con cobertura global.\n",
     "\n",
     "---\n",
     "\n",
     "## Reproducibilidad\n",
     "- Dependencias detalladas en `requirements.txt`  \n",
     "- Estructura del proyecto basada en mejores prácticas de Data Science  \n",
-    "- Notebook y scripts alojados en `/notebooks` y `/src`"
+    "- Notebook y scripts alojados en `/notebooks` y `/src`\n",
+    "\n",
+    "**Citación recomendada:**\n",
+    "V-Dem Institute (2025). *V-Dem Country-Year Dataset v15*. University of Gothenburg and University of Notre Dame."
    ]
   },
   {
