--- a/notebooks/01_exploracion.ipynb
+++ b/notebooks/01_exploracion.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "84c787d1",
    "metadata": {},
    "outputs": [],
@@ -99,9 +99,7 @@
     "from sklearn.cluster import KMeans\n",
     "\n",
     "# --- Evaluación del clustering ---\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "\n",
-    "print(\"Librerías importadas correctamente ✅\")"
+    "from sklearn.metrics import silhouette_score"
    ]
   },
   {
@@ -120,7 +118,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.14"
   }
  },
