--- a/notebooks/01_exploracion.ipynb
+++ b/notebooks/01_exploracion.ipynb
@@ -49,18 +49,21 @@
     "## Alcance y supuestos\n",
     "- Se utiliza información pública y consolidada de V-Dem.  \n",
     "- Se trabaja a nivel **comparado** (todos los países con datos disponibles).  \n",
+    "- El análisis se limita a variables seleccionadas y al año más reciente con cobertura global.  \n",
     "- El resultado **no implica juicios normativos**, sino una clasificación basada en datos.  \n",
-    "- El análisis se limita a variables seleccionadas y al año más reciente con cobertura global.\n",
+    "\n",
+    "Si bien la medición de la democracia es un campo atravesado por debates conceptuales y disputas normativas, este proyecto no busca cuestionar ni reformular las definiciones adoptadas por V-Dem. El foco se centra en **aplicar técnicas de análisis no supervisado** para identificar patrones y agrupamientos **en función de los datos disponibles**, reconociendo que toda clasificación politológica es una representación parcial de fenómenos complejos.\n",
     "\n",
     "---\n",
     "\n",
     "## Reproducibilidad\n",
     "- Dependencias detalladas en `requirements.txt`  \n",
     "- Estructura del proyecto basada en mejores prácticas de Data Science  \n",
-    "- Notebook y scripts alojados en `/notebooks` y `/src`\n",
+    "- Notebook y scripts alojados en `/notebooks` y `/src`  \n",
     "\n",
-    "**Citación recomendada:**\n",
-    "V-Dem Institute (2025). *V-Dem Country-Year Dataset v15*. University of Gothenburg and University of Notre Dame."
+    "**Citación recomendada:**  \n",
+    "V-Dem Institute (2025). *V-Dem Country-Year Dataset v15*. Gothenburg: University of Gothenburg and University of Notre Dame.  \n",
+    "Disponible en: https://www.v-dem.net/data/the-v-dem-dataset/"
    ]
   },
   {
