--- a/notebooks/01_exploracion.ipynb
+++ b/notebooks/01_exploracion.ipynb
@@ -29750,7 +29750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "19a59203",
    "metadata": {},
    "outputs": [
@@ -29843,7 +29843,7 @@
        "4         0.716018  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29877,14 +29877,12 @@
    "source": [
     "### 3.2 Aplicación de PCA\n",
     "\n",
-    "Se aplica PCA para reducir las cinco dimensiones democráticas a dos componentes principales \n",
-    "que concentren la mayor parte de la variabilidad entre países. Esto permitirá visualizar \n",
-    "diferencias estructurales en los modelos democráticos vigentes en 2024."
+    "Se aplica PCA para reducir las cinco dimensiones democráticas a dos componentes principales que concentren la mayor parte de la variabilidad entre países. Esto permitirá visualizar diferencias estructurales en los modelos democráticos vigentes en 2024."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "b260cf08",
    "metadata": {},
    "outputs": [
@@ -29964,7 +29962,7 @@
        "4  1.155349 -0.242884        Ghana           7"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29972,7 +29970,7 @@
    "source": [
     "# --- Aplicación de PCA a los indicadores normalizados ---\n",
     "\n",
-    "k=2\n",
+    "k=2 # k=2 porque PC1 y PC2 concentran la mayor parte de la variabilidad\n",
     "pca = PCA(n_components=k)\n",
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
@@ -29986,7 +29984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "bdf376b6",
    "metadata": {},
    "outputs": [
@@ -29995,6 +29993,7 @@
      "output_type": "stream",
      "text": [
       "Varianza explicada por cada componente:\n",
+      "\n",
       "PC1: 96.96%\n",
       "PC2: 1.35%\n",
       "Total explicada: 98.31%\n"
@@ -30004,7 +30003,7 @@
    "source": [
     "# --- Varianza explicada por cada componente ---\n",
     "var_exp = pca.explained_variance_ratio_\n",
-    "print(\"Varianza explicada por cada componente:\")\n",
+    "print(\"Varianza explicada por cada componente:\\n\")\n",
     "print(f\"PC1: {var_exp[0]:.2%}\")\n",
     "print(f\"PC2: {var_exp[1]:.2%}\")\n",
     "print(f\"Total explicada: {var_exp.sum():.2%}\")"
@@ -30012,7 +30011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e69ffe8a",
    "metadata": {},
    "outputs": [
@@ -30091,6 +30090,14 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Varianza explicada por cada componente:\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<Figure size 800x400 with 0 Axes>"
@@ -30131,6 +30138,7 @@
     "print(\"Contribución de los indicadores a los componentes PCA:\")\n",
     "display(loadings.round(3))\n",
     "\n",
+    "\n",
     "# Visualización en gráfico de barras\n",
     "plt.figure(figsize=(8, 4))\n",
     "loadings.plot(kind='bar', figsize=(10, 5))\n",
@@ -30147,7 +30155,7 @@
    "id": "c7bf1831",
    "metadata": {},
    "source": [
-    "**Interpretación de loadings**\n",
+    "### 3.2.2 Interpretación de loadings\n",
     "\n",
     "- **PC1** carga fuertemente (y de forma positiva) en los 5 indicadores →  \n",
     "  es un **índice global de calidad democrática**\n",
@@ -30164,11 +30172,11 @@
    "id": "f74578de",
    "metadata": {},
    "source": [
-    "### ✅ Conclusiones PCA (2024)\n",
+    "### 3.2.3 Conclusiones PCA (2024)\n",
     "\n",
-    "- PC1 explica **casi el 97%** de la varianza → la democracia es una **dimensión dominante**\n",
-    "- PC2 agrega **variaciones más sutiles** dentro de las democracias\n",
-    "- La estructura resultante es **conceptualmente coherente con la teoría política**\n"
+    "- PC1 explica **casi el 97%** de la varianza → la democracia es una **dimensión dominante** a nivel global\n",
+    "- PC2 introduce **variaciones más sutiles** dentro del universo democrático\n",
+    "- La estructura PC1–PC2 es **conceptualmente coherente con la teoría política comparada**"
    ]
   },
   {
@@ -30178,14 +30186,14 @@
    "source": [
     "### 3.3 Visualización inicial del espacio PCA\n",
     "\n",
-    "Se grafican los países según los dos primeros componentes principales, lo cual permite\n",
-    "observar cómo se distribuyen las distintas configuraciones democráticas en 2024, antes de\n",
-    "aplicar algoritmos de agrupamiento."
+    "Se grafica la posición de cada país en el nuevo espacio de dos dimensiones definido por PCA, lo que permite observar cómo se distribuyen las configuraciones democráticas en 2024 antes de aplicar algoritmos de agrupamiento.\n",
+    "\n",
+    "Esta visualización facilita identificar patrones políticos globales y posibles grupos de países con características democráticas similares."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f568c81e",
    "metadata": {},
    "outputs": [
@@ -30221,7 +30229,7 @@
     "cbar.set_label(\"Nivel de Democracia Electoral (v2x_polyarchy)\")\n",
     "\n",
     "plt.grid(True, linestyle='--', alpha=0.4)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -30229,15 +30237,14 @@
    "id": "f548080b",
    "metadata": {},
    "source": [
-    "### 📌 Interpretación inicial del espacio PCA (sin clustering)\n",
+    "### 3.3.1 Interpretación inicial del espacio PCA (sin clustering)\n",
     "\n",
     "El plano PCA muestra una **estructura política global reconocible**:\n",
     "\n",
     "- **PC1** explica casi toda la variación y **ordena el mundo político** en un eje\n",
-    "  libertad/autocracia → diferenciando **democracias consolidadas** (hacia la derecha)\n",
-    "  de **regímenes autoritarios o híbridos** (hacia la izquierda).\n",
-    "- **PC2** introduce cambios mucho menores, vinculados a matices en\n",
-    "  participación y calidad institucional dentro de las democracias.\n",
+    "  que separa **autocracias** ↔ **democracias plenas**\n",
+    "- **PC2** introduce cambios más sutiles, vinculados a matices en participación y\n",
+    "  calidad institucional dentro del mundo democrático\n",
     "\n",
     "Se utiliza el índice **`v2x_polyarchy`** como escala de color, lo que permite observar\n",
     "que los países con mayor democracia electoral **se concentran en los valores altos de PC1**\n",
@@ -30245,12 +30252,29 @@
     "restringidos se ubican en el extremo opuesto del eje.\n",
     "\n",
     "📌 En síntesis:  \n",
-    "**El PCA ya revela una tipología democrática implícita**, incluso sin aplicar clustering."
+    "El PCA **ya revela una tipología democrática implícita**, incluso sin aplicar clustering."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d0dd29b",
+   "id": "21aa6e33",
+   "metadata": {},
+   "source": [
+    "## 4. Agrupamiento de países (Clustering)\n",
+    "\n",
+    "Una vez reducido el espacio a dos dimensiones relevantes mediante PCA, se aplican técnicas de **aprendizaje no supervisado** para identificar tipologías de regímenes políticos en 2024.\n",
+    "\n",
+    "Se utilizará **K-Means**, un algoritmo que busca particionar los datos en grupos internamente similares y externamente distintos.\n",
+    "\n",
+    "Para determinar el número óptimo de clusters (**k**), se evaluarán dos criterios complementarios:\n",
+    "\n",
+    "- **El método del codo (Elbow Method)**\n",
+    "- **El Silhouette Score**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d871580c",
    "metadata": {},
    "source": []
   }
