--- a/notebooks/01_exploracion.ipynb
+++ b/notebooks/01_exploracion.ipynb
@@ -34465,10 +34465,17 @@
     "\n",
     "---\n",
     "\n",
+    "### ⚠️ Limitaciones del análisis\n",
+    "- Se utilizó únicamente la **foto actual** (2024) → no se refleja la evolución democrática.\n",
+    "- La clasificación **no es normativa**, sino estadística: agrupa similitudes en indicadores,\n",
+    "  no juicios sustantivos sobre “mejor” o “peor” sistema.\n",
+    "\n",
+    "---\n",
+    "\n",
     "### 🚀 Próximos pasos sugeridos\n",
     "\n",
     "📌 Extensiones metodológicas:\n",
-    "- Incorporar **series temporales** (1990–2024) → análisis de evolución democrática\n",
+    "- Incorporar **series temporales** (1990–2024) → evolución de trayectorias democráticas\n",
     "- Probar métodos más robustos de clustering (**DBSCAN**, **GMM**)\n",
     "- Añadir más indicadores (p. ej., derechos de minorías, control de corrupción)\n",
     "\n",
@@ -34488,6 +34495,12 @@
     "\n",
     "> **La tipología identificada es empíricamente sólida, teóricamente compatible y geopolíticamente interpretable**, lo que la convierte en un excelente insumo para investigación y toma de decisiones pública internacional."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0c54bda",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
