--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -31417,6 +31417,199 @@
   },
   {
    "cell_type": "markdown",
+   "id": "389e95cf",
+   "metadata": {},
+   "source": [
+    "### 5.4 Exportación del dataset final procesado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "eaa083d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset procesado exportado correctamente a: data/processed/vdem_clusters_2024.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>iso3</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>cluster_label</th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>v2x_polyarchy</th>\n",
+       "      <th>v2x_libdem</th>\n",
+       "      <th>v2x_egaldem</th>\n",
+       "      <th>v2x_partipdem</th>\n",
+       "      <th>v2x_delibdem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>MEX</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Democracias intermedias / híbridas</td>\n",
+       "      <td>-0.486049</td>\n",
+       "      <td>0.570347</td>\n",
+       "      <td>0.505</td>\n",
+       "      <td>0.251</td>\n",
+       "      <td>0.268</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>0.260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Suriname</td>\n",
+       "      <td>SUR</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Democracias consolidadas</td>\n",
+       "      <td>2.176055</td>\n",
+       "      <td>0.080543</td>\n",
+       "      <td>0.768</td>\n",
+       "      <td>0.637</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>0.497</td>\n",
+       "      <td>0.599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>SWE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Democracias consolidadas</td>\n",
+       "      <td>3.803226</td>\n",
+       "      <td>-0.209956</td>\n",
+       "      <td>0.881</td>\n",
+       "      <td>0.845</td>\n",
+       "      <td>0.795</td>\n",
+       "      <td>0.630</td>\n",
+       "      <td>0.793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>CHE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Democracias consolidadas</td>\n",
+       "      <td>4.395336</td>\n",
+       "      <td>0.147090</td>\n",
+       "      <td>0.894</td>\n",
+       "      <td>0.847</td>\n",
+       "      <td>0.830</td>\n",
+       "      <td>0.794</td>\n",
+       "      <td>0.862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Ghana</td>\n",
+       "      <td>GHA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Democracias intermedias / híbridas</td>\n",
+       "      <td>1.155349</td>\n",
+       "      <td>-0.242884</td>\n",
+       "      <td>0.669</td>\n",
+       "      <td>0.567</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>0.320</td>\n",
+       "      <td>0.546</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   country_id country_name iso3 cluster                       cluster_label  \\\n",
+       "0           3       Mexico  MEX       0  Democracias intermedias / híbridas   \n",
+       "1           4     Suriname  SUR       2            Democracias consolidadas   \n",
+       "2           5       Sweden  SWE       2            Democracias consolidadas   \n",
+       "3           6  Switzerland  CHE       2            Democracias consolidadas   \n",
+       "4           7        Ghana  GHA       0  Democracias intermedias / híbridas   \n",
+       "\n",
+       "        PC1       PC2  v2x_polyarchy  v2x_libdem  v2x_egaldem  v2x_partipdem  \\\n",
+       "0 -0.486049  0.570347          0.505       0.251        0.268          0.345   \n",
+       "1  2.176055  0.080543          0.768       0.637        0.575          0.497   \n",
+       "2  3.803226 -0.209956          0.881       0.845        0.795          0.630   \n",
+       "3  4.395336  0.147090          0.894       0.847        0.830          0.794   \n",
+       "4  1.155349 -0.242884          0.669       0.567        0.455          0.320   \n",
+       "\n",
+       "   v2x_delibdem  \n",
+       "0         0.260  \n",
+       "1         0.599  \n",
+       "2         0.793  \n",
+       "3         0.862  \n",
+       "4         0.546  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# --- Exportación del dataset final procesado ---\n",
+    "\n",
+    "# Unión de datos PCA y atributos por país\n",
+    "df_final = df_sel.merge(\n",
+    "    pca_df[[\"country_id\", \"PC1\", \"PC2\"]],\n",
+    "    on=\"country_id\",\n",
+    "    how=\"left\"\n",
+    ")\n",
+    "\n",
+    "# Selección y orden de columnas\n",
+    "cols = [\n",
+    "    \"country_id\", \"country_name\", \"iso3\",\n",
+    "    \"cluster\", \"cluster_label\",\n",
+    "    \"PC1\", \"PC2\",\n",
+    "    \"v2x_polyarchy\", \"v2x_libdem\", \"v2x_egaldem\",\n",
+    "    \"v2x_partipdem\", \"v2x_delibdem\"\n",
+    "]\n",
+    "\n",
+    "df_final = df_final[cols]\n",
+    "\n",
+    "# Exportar a CSV\n",
+    "output_path = \"data/processed/vdem_clusters_2024.csv\"\n",
+    "df_final.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(f\"Dataset procesado exportado correctamente a: {output_path}\")\n",
+    "df_final.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d07c7ce",
    "metadata": {},
    "source": [
