--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -13,64 +13,80 @@
    "id": "15dcf1d3",
    "metadata": {},
    "source": [
-    "\n",
     "## Introducción\n",
     "\n",
-    "La democracia adopta múltiples formas y niveles de calidad. Este proyecto analiza **cómo se agrupan los países del mundo** según sus características democráticas, utilizando indicadores desarrollados por el prestigioso proyecto **V-Dem (Varieties of Democracy)**.\n",
+    "La democracia adopta múltiples formas y niveles de calidad. Este proyecto analiza **cómo se agrupan los países del mundo** según sus características institucionales y políticas, empleando indicadores desarrollados por el prestigioso proyecto **V-Dem (Varieties of Democracy)**.\n",
     "\n",
-    "V-Dem es una iniciativa internacional coordinada por la **Universidad de Gotemburgo** (Suecia) y la **Universidad de Notre Dame** (Estados Unidos), que trabaja junto con una red global de más de **3.500 expertos** para evaluar la calidad institucional y democrática de países en todo el mundo.\n",
+    "V-Dem es una iniciativa internacional coordinada por la **Universidad de Gotemburgo** (Suecia) y la **Universidad de Notre Dame** (Estados Unidos), que trabaja junto con una red global de más de **3.500 expertos** para evaluar la calidad democrática a escala mundial.\n",
     "\n",
-    "Los datos de V-Dem constituyen **el estándar más completo** en estudios comparados de democracia, midiendo dimensiones como:\n",
+    "Los datos de V-Dem constituyen **uno de los estándares más completos** en estudios comparados de democracia, midiendo dimensiones tales como:\n",
     "\n",
     "- libertades civiles  \n",
     "- participación ciudadana  \n",
-    "- independencia judicial  \n",
-    "- libertad de prensa  \n",
+    "- independencia del poder judicial  \n",
+    "- libertad y pluralismo de prensa  \n",
     "- igualdad política  \n",
     "- control del poder y rendición de cuentas  \n",
     "\n",
-    "El objetivo de este proyecto es **descubrir tipologías de democracias** en el presente, combinando técnicas de **Machine Learning no supervisado** con interpretación politológica para proponer una clasificación empírica de los regímenes políticos contemporáneos.\n",
+    "---\n",
     "\n",
-    "**Dataset:** `V-Dem-CY-Core-v15.csv`  \n",
+    "En este proyecto se aplican **técnicas de Machine Learning no supervisado** para **identificar tipologías empíricas de regímenes políticos contemporáneos**. Mediante análisis de componentes principales (**PCA**) y **K-Means**, se encuentra que el modelo óptimo de agrupamiento distingue **tres clusters**:\n",
+    "\n",
+    "- 🟢 *Democracias consolidadas* — cluster 2  \n",
+    "- 🟡 *Democracias intermedias / híbridas* — cluster 0  \n",
+    "- 🔴 *Regímenes autoritarios* — cluster 1  \n",
+    "\n",
+    "Esta clasificación surge **a partir de los datos**, sin imponer categorías normativas predefinidas.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Dataset utilizado**\n",
+    "- `V-Dem-CY-Core-v15.csv`  \n",
     "- Versión 15 (marzo 2025)  \n",
-    "- Datos país–año con +1.000 indicadores de democracia, derechos y participación  \n",
-    "- Se utilizará el **año más reciente disponible** para una visión actual del panorama democrático global\n",
+    "- Información país–año con más de 1.000 indicadores  \n",
+    "- Se emplea el **año más reciente disponible** para una visión actual del panorama democrático global  \n",
     "\n",
     "---\n",
     "\n",
     "## Preguntas guía\n",
-    "- ¿Qué tipos de democracia se observan hoy en el mundo?  \n",
-    "- ¿Qué indicadores politológicos definen mejor esas diferencias?  \n",
-    "- ¿Qué países conforman democracias **liberales**, **electorales**, **delegativas** o **autoritarismos**?\n",
+    "\n",
+    "- ¿Cuáles son los **grandes grupos de regímenes políticos** observados hoy en el mundo?  \n",
+    "- ¿Qué indicadores politológicos diferencian mejor esos modelos?  \n",
+    "- ¿En qué cluster se ubican países clave como Argentina, Brasil, Japón o Turquía?  \n",
     "\n",
     "---\n",
     "\n",
     "## Objetivos\n",
-    "- Seleccionar indicadores centrales sobre calidad democrática (instituciones, libertades, participación).  \n",
+    "\n",
+    "- Seleccionar indicadores centrales sobre calidad democrática.  \n",
     "- Aplicar **PCA** para reducción de dimensionalidad.  \n",
-    "- Entrenar **K-Means** (y/o DBSCAN) para identificar clusters.  \n",
-    "- Visualizar los agrupamientos en 2D y **analizar sus implicancias politológicas**.\n",
+    "- Entrenar **K-Means** para identificar agrupamientos robustos.  \n",
+    "- Visualizar las tipologías globales resultantes y **analizar sus implicancias politológicas**.  \n",
     "\n",
     "---\n",
     "\n",
     "## Alcance y supuestos\n",
-    "- Se utiliza información pública y consolidada de V-Dem.  \n",
-    "- Se trabaja a nivel **comparado** (todos los países con datos disponibles).  \n",
-    "- El análisis se limita a variables seleccionadas y al año más reciente con cobertura global.  \n",
-    "- El resultado **no implica juicios normativos**, sino una clasificación basada en datos.  \n",
     "\n",
-    "Si bien la medición de la democracia es un campo atravesado por debates conceptuales y disputas normativas, este proyecto no busca cuestionar ni reformular las definiciones adoptadas por V-Dem. El foco se centra en **aplicar técnicas de análisis no supervisado** para identificar patrones y agrupamientos **en función de los datos disponibles**, reconociendo que toda clasificación politológica es una representación parcial de fenómenos complejos.\n",
+    "- Análisis comparado: incluye todos los países con datos disponibles.  \n",
+    "- Se consideran **variables institucionales y de libertades en 2024/último año disponible**.  \n",
+    "- Se reconoce que **toda clasificación politológica es una simplificación** de fenómenos complejos.  \n",
+    "- El propósito no es emitir **juicios normativos**, sino explorar patrones empíricos existentes.  \n",
     "\n",
     "---\n",
     "\n",
     "## Reproducibilidad\n",
-    "- Dependencias detalladas en `requirements.txt`  \n",
-    "- Estructura del proyecto basada en mejores prácticas de Data Science  \n",
-    "- Notebook y scripts alojados en `/notebooks` y `/src`  \n",
     "\n",
-    "**Citación recomendada:**  \n",
-    "V-Dem Institute (2025). *V-Dem Country-Year Dataset v15*. Gothenburg: University of Gothenburg and University of Notre Dame.  \n",
-    "Disponible en: https://www.v-dem.net/data/the-v-dem-dataset/"
+    "- Dependencias definidas en `requirements.txt`  \n",
+    "- Estructura del proyecto basada en mejores prácticas de Data Science  \n",
+    "- Archivo exportado: `data/processed/vdem_clusters_2024.csv`  \n",
+    "- Código y visualizaciones disponibles en GitHub  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Citación recomendada**  \n",
+    "V-Dem Institute (2025). *V-Dem Country-Year Dataset v15.*  \n",
+    "Gothenburg: University of Gothenburg and University of Notre Dame.  \n",
+    "https://www.v-dem.net/data/the-v-dem-dataset/"
    ]
   },
   {
